docs: entranceのapiドキュメントコメント作成
